chore: int tests
