# src/interface/api.yaml
@@ -57,6 +57,44 @@ paths:
       operationId: MetricsGet
       summary: Prometheus metrics endpoint
       description: The HTTP request GET /metrics is used to return metrics for the API.
+  /ping:
+    post:
+      description: |
+        TBD
+      summary: Look up participant information
+      tags:
+        - participants
+        - ping
+      operationId: PingPost
+      requestBody:
+        description: TBD.
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                requestId:
+                  $ref: '#/components/schemas/CorrelationId'
+      responses:
+        '202':
+          $ref: '#/components/responses/202'
+        '400':
+          $ref: '#/components/responses/400'
+        '401':
+          $ref: '#/components/responses/401'
+        '403':
+          $ref: '#/components/responses/403'
+        '404':
+          $ref: '#/components/responses/404'
+        '405':
+          $ref: '#/components/responses/405'
+        '406':
+          $ref: '#/components/responses/406'
+        '501':
+          $ref: '#/components/responses/501'
+        '503':
+          $ref: '#/components/responses/503'
   /ping/{ID}:
     put:
       description: |
@@ -119,6 +157,8 @@ components:
   responses:
     '200':
       description: OK
+    '202':
+      description: Accepted
     '400':
       description: Bad Request
       content:
@@ -293,6 +333,12 @@ components:
       properties:
         errorInformation:
           $ref: '#/components/schemas/ErrorInformation'
+    CorrelationId:
+      title: CorrelationId
+      type: string
+      pattern: ^[0-9a-f]{8}-[0-9a-f]{4}-[1-7][0-9a-f]{3}-[89ab][0-9a-f]{3}-[0-9a-f]{12}$|^[0-9A-HJKMNP-TV-Z]{26}$
+      description: Identifier that correlates all messages of the same sequence. The supported identifiers formats are for lowercase [UUID](https://datatracker.ietf.org/doc/html/rfc9562) and uppercase [ULID](https://github.com/ulid/spec)
+      example: b51ec534-ee48-4575-b6a9-ead2955b8069
   parameters:
     ID:
       name: ID
